--- a/viking_store/styles.css
+++ b/viking_store/styles.css
@@ -1,7 +1,7 @@
 /*header, aside, section, footer, div {
   border: 1px solid #ddd;
-}*/
-/*Navbar*/
+}
+*//*Navbar*/
 .nav-container img {
   height: 20px;
   width: 20px;
@@ -10,6 +10,7 @@
 .nav-container {
   height: 20px;
   padding: 20px;
+  border-bottom: solid;
 }
 .nav-container .logo {
   display: inline-block;
@@ -54,10 +55,11 @@
 }
 
 /* Items */
-.items img {
+.items .itemImage img {
   width: 120px;
   height: 100px;
   border: double;
+
 }
 .items {
   margin: 10px 15%;
@@ -71,6 +73,16 @@
   background: #333;
   color: #fff;
   margin:0 auto;
+}
+
+.items .itemPrice {
+  width : 50px;
+  height: 20px;
+  background: #fff;
+  color: #333;
+  position: relative;
+  bottom: -10px;
+  right: 15px;
 }
 
 .items .addtocart-container {
@@ -92,11 +104,19 @@
   padding: 3px 5px;
 }
 
-.col-1-3 {
-  width: 30%;
-  padding-left: 15px;
-  padding-right: 15px;
+.column-left{
+  float: left;
+  width: 33%;
 }
+.column-right{
+  float: right;
+  width: 33%;
+}
+.column-center{
+  display: inline-block;
+  width: 33%;
+}
+
 .items .item-entry {
   display: inline-block;
   margin: 10px auto 10px auto;
@@ -105,14 +125,19 @@
 
 /* Pagination */
 .pagination {
+  margin: 10px 0 150px 0;
   text-align: center;
-}
+  }
 .pagination a {
   padding: 10px;
+  color: #4E6A9D;
+
 }
 .pagination p {
   display: inline-block;
   padding: 5px;
+  color: #4E6A9D;
+
 }
 .pagination .active {
   text-decoration: none;
@@ -122,11 +147,12 @@
 .footer-container {
   width: 100%;
   height: 100px;
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom:  0;
   background: #333;
   color: #fff;
+
 }
 footer section {
   margin: 10px 0;
